TBBA-123 fix for scrollbars on the batch editing tables. need to do more work on this to make the text fields auto expand as there is some weirdness going on ..

--- a/app/styles/globals.scss
+++ b/app/styles/globals.scss
@@ -59,7 +59,7 @@ html {
     background-color: #eea633 !important;
 }
 .saved.red {
-    background-color: #c13244 !important;
+    background-color: #D24D57 !important;
 }
 .saved {
     padding: 8px 20px 8px 0px!important;
@@ -129,7 +129,7 @@ td select {
     font-weight: 400;
 }
 .red {
-    background-color: #c13244;
+    background-color: #D24D57;
     color: #fff;
 }
 .taxonomy-list h4 {
