--- a/app/styles/tbba.scss
+++ b/app/styles/tbba.scss
@@ -288,3 +288,4 @@ box-shadow: inset 0px -2px 0px 0px rgba(1,168,223,1) !important;}
 .select-template .table-full tbody > tr:last-child > td {
   padding-bottom: 0px;
 }
+.sca-batch-editing textarea{overflow:hidden!important;height:40px!important;max-height:150px!important;}
